[package]
name = "qtizer"
version = "0.7.0"
edition = "2024"
description = "Quantization/palette-generation tool using k-means clustering on pixel data"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
image = "0.25.8"
rand = "0.9.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
